--- a/app/src/main/res/layout/item_lig_prov.xml
+++ b/app/src/main/res/layout/item_lig_prov.xml
@@ -28,7 +28,7 @@
 
     <TextView
         android:id="@+id/textViewCliente"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
