--- a/app/src/main/res/layout/activity_form_lig_prov.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov.xml
@@ -1,81 +1,333 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:clipToPadding="false"
+    android:fillViewport="true">
+    <!--android:configChanges="keyboardHidden|orientation|screenLayout|screenSize">-->
 
-    <TextView
-        android:id="@+id/TextViewFormOrdem"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:gravity="center"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="123888123888123888" />
+    <android.support.constraint.ConstraintLayout
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/TextViewFormCliente"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/TextViewFormOrdem"
-        app:layout_constraintHorizontal_bias="0.458"
-        app:layout_constraintStart_toStartOf="@+id/TextViewFormOrdem"
-        app:layout_constraintTop_toBottomOf="@+id/TextViewFormOrdem"
-        tools:text="Erick Kreisher de Orleans e da Silva" />
-
-    <TextView
-        android:id="@+id/TextViewFormEndereco"
-        android:layout_width="0dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="8dp"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="@+id/TextViewFormCliente"
-        app:layout_constraintStart_toStartOf="@+id/TextViewFormCliente"
-        app:layout_constraintTop_toBottomOf="@+id/TextViewFormCliente"
-        tools:text="Rua da Polenta Perigosa, 666, Pamonheiros, AF" />
-
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/TextInputObs"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="@+id/TextViewFormEndereco"
-        app:layout_constraintStart_toStartOf="@+id/TextViewFormEndereco"
-        app:layout_constraintTop_toBottomOf="@+id/TextViewFormEndereco">
-
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/TextViewFormOrdem"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Observação"
-            android:inputType="textMultiLine" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="center"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="123888123888123888" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/TextInputCargaMedida"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="@+id/TextInputObs"
-        app:layout_constraintStart_toStartOf="@+id/TextInputObs"
-        app:layout_constraintTop_toBottomOf="@+id/TextInputObs">
 
-        <android.support.design.widget.TextInputEditText
-            android:layout_width="match_parent"
+        <!-- Nome cliente-->
+        <TextView
+            android:id="@+id/TextViewLP1"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:hint="Carga Medida"
-            android:inputType="number"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_marginTop="16dp"
+            android:text="Nome Cliente"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormOrdem"
+            app:layout_constraintHorizontal_bias="0.458"
+            app:layout_constraintStart_toStartOf="@+id/TextViewFormOrdem"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormOrdem" />
+        <TextView
+            android:id="@+id/TextViewFormCliente"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP1"
+            app:layout_constraintHorizontal_bias="0.458"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP1"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP1"
+            tools:text="TextViewFormCliente" />
 
-</android.support.constraint.ConstraintLayout>
+
+        <!-- Endereço -->
+        <TextView
+            android:id="@+id/TextViewLP2"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Endereço"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormCliente"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP1"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormCliente" />
+        <TextView
+            android:id="@+id/TextViewFormEndereco"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP2"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP2"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP2"
+            tools:text="TextViewFormEndereco" />
+
+
+        <!-- NumCli -->
+        <TextView
+            android:id="@+id/TextViewLP3"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Numero Cliente"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormEndereco"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP2"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormEndereco" />
+        <TextView
+            android:id="@+id/TextViewnNumeroCliente"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP3"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP3"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP3"
+            tools:text="TextViewnNumeroCliente" />
+
+
+        <!-- Bairro -->
+        <TextView
+            android:id="@+id/TextViewLP4"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Bairro"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewnNumeroCliente"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP3"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewnNumeroCliente" />
+        <TextView
+            android:id="@+id/TextViewFormBairro"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP4"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP4"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP4"
+            tools:text="TextViewFormBairro" />
+
+
+        <!-- DescEtapa -->
+        <TextView
+            android:id="@+id/TextViewLP5"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Descrição Etapa"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormBairro"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP4"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormBairro" />
+        <TextView
+            android:id="@+id/TextViewFormDescEtapa"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP5"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP5"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP5"
+            tools:text="TextViewFormDescEtapa" />
+
+
+        <!-- Observacoes -->
+        <TextView
+            android:id="@+id/TextViewLP6"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Observações"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormDescEtapa"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP5"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormDescEtapa" />
+        <TextView
+            android:id="@+id/TextViewFormObservacoes"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP6"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP6"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP6"
+            tools:text="TextViewFormObservacoes" />
+
+
+
+        <!-- DescRetorno -->
+        <TextView
+            android:id="@+id/TextViewLP7"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Descrição Retorno"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacoes"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP6"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacoes" />
+        <TextView
+            android:id="@+id/TextViewFormDescRetorno"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP7"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP7"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP7"
+            tools:text="TextViewFormDescRetorno" />
+
+
+        <!-- ObservacaoExe -->
+        <TextView
+            android:id="@+id/TextViewLP8"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Observação Exe"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormDescRetorno"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP7"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormDescRetorno" />
+        <TextView
+            android:id="@+id/TextViewFormObservacaoExe"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP8"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP8"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP8"
+            tools:text="TextViewFormObservacaoExe" />
+
+
+        <!-- TempoMaxServico -->
+        <TextView
+            android:id="@+id/TextViewLP9"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Tempo Max Serviço"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacaoExe"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP8"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacaoExe" />
+        <TextView
+            android:id="@+id/TextViewFormTempoMaxServico"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP9"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP9"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP9"
+            tools:text="TextViewFormTempoMaxServico" />
+
+
+        <!-- PercTempoMaximo -->
+        <TextView
+            android:id="@+id/TextViewLP10"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="Perc Tempo Maximo"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormTempoMaxServico"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP9"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormTempoMaxServico" />
+        <TextView
+            android:id="@+id/TextViewFormPercTempoMaximo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewLP10"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP10"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewLP10"
+            tools:text="TextViewFormPercTempoMaximo" />
+
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TextInputObs"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="32dp"
+            app:layout_constraintEnd_toEndOf="@+id/TextViewFormPercTempoMaximo"
+            app:layout_constraintStart_toStartOf="@+id/TextViewLP10"
+            app:layout_constraintTop_toBottomOf="@+id/TextViewFormPercTempoMaximo">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Observação"
+                android:inputType="textMultiLine" />
+        </android.support.design.widget.TextInputLayout>
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/TextInputCargaMedida"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="@+id/TextInputObs"
+            app:layout_constraintStart_toStartOf="@+id/TextInputObs"
+            app:layout_constraintTop_toBottomOf="@+id/TextInputObs">
+
+            <android.support.design.widget.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Carga Medida"
+                android:inputType="number" />
+        </android.support.design.widget.TextInputLayout>
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
