--- a/app/src/main/res/layout/activity_form_lig_prov.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov.xml
@@ -10,7 +10,6 @@
     <!--android:configChanges="keyboardHidden|orientation|screenLayout|screenSize">-->
 
     <android.support.constraint.ConstraintLayout
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -30,6 +29,26 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="123888123888123888" />
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonAlbum"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="8dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:backgroundTint="@color/colorPrimary"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/ic_album" />
 
 
         <!-- Nome cliente-->
@@ -38,13 +57,16 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             android:text="Nome Cliente"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintEnd_toEndOf="@+id/TextViewFormOrdem"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.458"
             app:layout_constraintStart_toStartOf="@+id/TextViewFormOrdem"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormOrdem" />
+
         <TextView
             android:id="@+id/TextViewFormCliente"
             android:layout_width="0dp"
@@ -72,6 +94,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormCliente"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP1"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormCliente" />
+
         <TextView
             android:id="@+id/TextViewFormEndereco"
             android:layout_width="0dp"
@@ -98,6 +121,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormEndereco"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP2"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormEndereco" />
+
         <TextView
             android:id="@+id/TextViewnNumeroCliente"
             android:layout_width="0dp"
@@ -124,6 +148,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewnNumeroCliente"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP3"
             app:layout_constraintTop_toBottomOf="@+id/TextViewnNumeroCliente" />
+
         <TextView
             android:id="@+id/TextViewFormBairro"
             android:layout_width="0dp"
@@ -150,6 +175,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormBairro"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP4"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormBairro" />
+
         <TextView
             android:id="@+id/TextViewFormDescEtapa"
             android:layout_width="0dp"
@@ -176,6 +202,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormDescEtapa"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP5"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormDescEtapa" />
+
         <TextView
             android:id="@+id/TextViewFormObservacoes"
             android:layout_width="0dp"
@@ -190,7 +217,6 @@
             tools:text="TextViewFormObservacoes" />
 
 
-
         <!-- DescRetorno -->
         <TextView
             android:id="@+id/TextViewLP7"
@@ -203,6 +229,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacoes"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP6"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacoes" />
+
         <TextView
             android:id="@+id/TextViewFormDescRetorno"
             android:layout_width="0dp"
@@ -229,6 +256,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormDescRetorno"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP7"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormDescRetorno" />
+
         <TextView
             android:id="@+id/TextViewFormObservacaoExe"
             android:layout_width="0dp"
@@ -255,6 +283,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormObservacaoExe"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP8"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormObservacaoExe" />
+
         <TextView
             android:id="@+id/TextViewFormTempoMaxServico"
             android:layout_width="0dp"
@@ -281,6 +310,7 @@
             app:layout_constraintEnd_toEndOf="@+id/TextViewFormTempoMaxServico"
             app:layout_constraintStart_toStartOf="@+id/TextViewLP9"
             app:layout_constraintTop_toBottomOf="@+id/TextViewFormTempoMaxServico" />
+
         <TextView
             android:id="@+id/TextViewFormPercTempoMaximo"
             android:layout_width="0dp"
@@ -293,7 +323,6 @@
             app:layout_constraintStart_toStartOf="@+id/TextViewLP10"
             app:layout_constraintTop_toBottomOf="@+id/TextViewLP10"
             tools:text="TextViewFormPercTempoMaximo" />
-
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/TextInputObs"
@@ -328,6 +357,8 @@
                 android:hint="Carga Medida"
                 android:inputType="number" />
         </android.support.design.widget.TextInputLayout>
+
+
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
