--- a/app/src/main/res/layout/item_lig_prov.xml
+++ b/app/src/main/res/layout/item_lig_prov.xml
@@ -59,10 +59,10 @@
         android:id="@+id/imageViewStatusOrdem"
         android:layout_width="20dp"
         android:layout_height="0dp"
+        android:contentDescription="Status da Ordem"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:contentDescription="Status da Ordem" />
+        app:layout_constraintTop_toTopOf="parent" />
 
 
 </android.support.constraint.ConstraintLayout>
