--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,32 +4,55 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
+    android:background="@android:color/background_light"
     tools:context=".splashActivity">
 
-    <ImageView
-        android:id="@+id/imageViewSplashLogo"
-        android:layout_width="250dp"
-        android:layout_height="80dp"
-        android:contentDescription="@string/alt_logo_energy"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/energy_logo" />
-
-    <!--<TextView-->
-        <!--android:id="@+id/textViewSplashLogo"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_marginTop="16dp"-->
-        <!--android:text="@string/app_name"-->
-        <!--android:textColor="@android:color/white"-->
-        <!--android:textSize="36sp"-->
+    <!--<ImageView-->
+        <!--android:id="@+id/imageViewSplashLogo"-->
+        <!--android:layout_width="250dp"-->
+        <!--android:layout_height="80dp"-->
+        <!--android:contentDescription="@string/alt_logo_energy"-->
         <!--app:layout_constraintBottom_toBottomOf="parent"-->
         <!--app:layout_constraintEnd_toEndOf="parent"-->
         <!--app:layout_constraintStart_toStartOf="parent"-->
-        <!--app:layout_constraintTop_toBottomOf="@+id/imageViewSplashLogo"-->
-        <!--app:layout_constraintVertical_bias="0.0" />-->
+        <!--app:layout_constraintTop_toTopOf="parent"-->
+        <!--app:srcCompat="@drawable/energy_logo" />-->
+
+    <VideoView
+        android:id="@+id/videoViewSplashLogo"
+        android:layout_width="0dp"
+        android:layout_height="216dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewSplashRemoveFlicker"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="@+id/videoViewSplashLogo"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/videoViewSplashLogo"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@android:color/background_light" />
+
+    <!--<TextView-->
+    <!--android:id="@+id/textViewSplashLogo"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_marginTop="16dp"-->
+    <!--android:text="@string/app_name"-->
+    <!--android:textColor="@android:color/white"-->
+    <!--android:textSize="36sp"-->
+    <!--app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--app:layout_constraintEnd_toEndOf="parent"-->
+    <!--app:layout_constraintStart_toStartOf="parent"-->
+    <!--app:layout_constraintTop_toBottomOf="@+id/imageViewSplashLogo"-->
+    <!--app:layout_constraintVertical_bias="0.0" />-->
 
 </android.support.constraint.ConstraintLayout>
