--- a/app/src/main/res/layout/item_lig_prov.xml
+++ b/app/src/main/res/layout/item_lig_prov.xml
@@ -8,6 +8,16 @@
     android:clickable="true"
     android:focusable="true">
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:color/background_light" />
+
     <TextView
         android:id="@+id/textViewOrdem"
         android:layout_width="wrap_content"
