--- a/app/src/main/res/layout/activity_form_lig_prov.xml
+++ b/app/src/main/res/layout/activity_form_lig_prov.xml
@@ -75,6 +75,26 @@
             app:srcCompat="@drawable/ic_album" />
 
 
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/buttonClandestino"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_margin="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:clickable="true"
+            android:focusable="true"
+            app:backgroundTint="@color/colorAccent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/buttonAlbum"
+            app:srcCompat="@drawable/ic_warning" />
+
+
         <!-- Nome cliente-->
         <TextView
             android:id="@+id/TextViewLP1"
