--- a/app/src/main/res/layout/activity_clandestino_form.xml
+++ b/app/src/main/res/layout/activity_clandestino_form.xml
@@ -7,9 +7,7 @@
     android:layout_height="match_parent"
     android:clipToPadding="false"
     android:fillViewport="true">
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".clandestinoFormActivity">
@@ -20,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:text="Clandestino #1111"
@@ -30,19 +28,45 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/textInputLayoutClandestEndereco"
-            android:layout_width="0dp"
+        <TextView
+            android:id="@+id/textViewClandestLatLong"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
+            android:text="Lat: --- | Long: ---"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textViewClandestNumero" />
+
+        <ProgressBar
+            android:id="@+id/progressBarClandestLatLong"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/textViewClandestLatLong"
+            app:layout_constraintStart_toEndOf="@+id/textViewClandestLatLong"
+            app:layout_constraintTop_toTopOf="@+id/textViewClandestLatLong" />
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/textInputLayoutClandestEndereco"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewClandestNumero">
+            app:layout_constraintTop_toBottomOf="@+id/textViewClandestLatLong">
 
             <android.support.design.widget.TextInputEditText
                 android:layout_width="match_parent"
