--- a/app/src/main/res/menu/menu_clandestino.xml
+++ b/app/src/main/res/menu/menu_clandestino.xml
@@ -2,17 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/action_search"
-        android:title="@string/menu_pesquisar"
-        app:actionViewClass="android.support.v7.widget.SearchView"
-        app:showAsAction="always"/>
-
     <item
-        android:id="@+id/menu_delete_lp"
+        android:id="@+id/menu_delete_clandestinos"
         android:title="@string/menu_limpar_aplicativo"/>
 
     <item
-        android:id="@+id/menu_export_lp"
+        android:id="@+id/menu_export_clandestinos"
         android:title="@string/menu_exportar_modificacoes"/>
 
 </menu>
